--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,22 @@
 buildscript {
     ext {
         kotlin_version = '1.8.10'
+        ksp_version = '1.0.9'
         core_version = '1.10.0'
         compose_bom_version = '2023.04.00'
         app_compat_version = '1.6.1'
         activity_compose_version = '1.7.0'
         compose_compiler_version = '1.4.2'
+        retrofit_version = '2.9.0'
+        okhttp_version = '4.10.0'
+        moshi_version = '1.14.0'
+
+
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
     id 'com.android.application' version '7.4.2' apply false
     id 'org.jetbrains.kotlin.android' version "$kotlin_version" apply false
+    id 'com.google.devtools.ksp' version "$kotlin_version-$ksp_version" apply false
+
 }
