--- a/build.gradle
+++ b/build.gradle
@@ -10,8 +10,13 @@ buildscript {
         retrofit_version = '2.9.0'
         okhttp_version = '4.10.0'
         moshi_version = '1.14.0'
+        dagger_hilt_version = '2.45'
+        hilt_version = '1.0.0'
+        lifecycle_version = '2.6.1'
 
-
+        dependencies {
+            classpath "com.google.dagger:hilt-android-gradle-plugin:$dagger_hilt_version"
+        }
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
