--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,6 +83,11 @@ dependencies {
     kapt "androidx.hilt:hilt-compiler:$hilt_version"
     implementation "androidx.hilt:hilt-navigation-compose:$hilt_version"
 
+    //ROOM
+    implementation "androidx.room:room-runtime:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
+    ksp "androidx.room:room-compiler:$room_version"
+
 
 
 
