--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,8 @@ buildscript {
         dagger_hilt_version = '2.45'
         hilt_version = '1.0.0'
         lifecycle_version = '2.6.1'
+        room_version = '2.5.1'
+
 
         dependencies {
             classpath "com.google.dagger:hilt-android-gradle-plugin:$dagger_hilt_version"
